--- a/config/hap_es-gs_1944_bak_2025-02-13.yaml
+++ b/config/hap_es-gs_1944_bak_2025-02-13.yaml
@@ -2,14 +2,14 @@ common:
   img_topic: "/usb_cam/image_raw"
   lid_topic: "/livox/lidar"
   imu_topic: "/livox/imu"
-  img_en: 1
+  img_en: 0
   lidar_en: 1
   ros_driver_bug_fix: false    # default = false
 
 extrin_calib:
   extrinsic_T: [ 0, 0, 0]
   extrinsic_R: [ 1, 0, 0, 0, 1, 0, 0, 0, 1]
-  Rcl: [0.003368760997322131,-0.9997449764164053,-0.022330104780422168,-0.007061991033141315,0.022305890289082607,-0.9997262503010811,0.9999693893974909,0.0035255337997418296,-0.006985046845664316]
+  Rcl: [0.008726203218641756,-0.9999619230641713,7.615242180438101e-05,0.01745207417020353,7.615242180438101e-05,-0.9998476980560421,0.9998096211202134,0.008726203218641756,0.01745207417020353]
   Pcl: [0.0,0.075,-0.005]
 
 time_offset: 
@@ -18,40 +18,40 @@ time_offset:
   exposure_time_init: 0.0 # default = 0.0
 
 preprocess:
-  point_filter_num: 4       # default = 1
-  filter_size_surf: 0.0001   # default = 0.1 | good = 0.0005
+  point_filter_num: 2       # default = 1
+  filter_size_surf: 0.00001   # default = 0.1 | good = 0.0005
   lidar_type: 1 # Livox Avia LiDAR
   scan_line: 6
-  blind: 1.2       # default = 0.80
+  blind: 1.5       # default = 0.80
 
 vio:
   max_iterations: 5    # default = 5
-  outlier_threshold: 100 # 78 100 156 #100 200 500 700 infinite
-  img_point_cov: 1         # default = 100 # no change with 10 ?  
-  patch_size: 0.1     # default = 8 ] good = 4
+  outlier_threshold: 16 # 78 100 156 #100 200 500 700 infinite
+  img_point_cov: 100          # default = 100 # no change with 10 ?  
+  patch_size: 4     # default = 8 ] good = 4
   patch_pyrimid_level: 4    # default = 4 | good = 4
   normal_en: true     # default = true
   raycast_en: false    # default = false
-  inverse_composition_en: false  #default = false | no idea if this helps or hinders
-  exposure_estimate_en: true # default = true | good = true
+  inverse_composition_en: true  #default = false | no idea if this helps or hinders
+  exposure_estimate_en: true # default = true | good = false
   inv_expo_cov: 1   # default = 0.1
 
 imu:
   imu_en: true #true
   imu_int_frame: 30 #30
-  acc_cov: 0.2 # 0.2      # default = 0.5 good=0.25?
+  acc_cov: 0.20 # 0.2      # default = 0.5 good=0.25?
   gyr_cov: 0.3 # 0.5      # default = 0.3 good=0.3?
   b_acc_cov: 0.0001 #0.0001 # 0.1 good = 0.001?
   b_gyr_cov: 0.0001 #0.0001 # 0.1 good = 0.001?
 
 lio:
   max_iterations: 5    # default = 5
-  dept_err: 0.002      # default = 0.02
-  beam_err: 0.005      # default = 0.05
-  min_eigen_value: 0.0001 # 0.005     #default = 0.0025 good=0.002
-  voxel_size: 0.25      # default = 0.5   | good = 0.025  ###MOST CRITICAL VALUE IMO###
+  dept_err: 0.02      # default = 0.02
+  beam_err: 0.05      # default = 0.05
+  min_eigen_value: 0.0015 # 0.005     #default = 0.0025 good=0.002
+  voxel_size: 0.03      # default = 0.5   | good = 0.025  ###MOST CRITICAL VALUE IMO###
   max_layer: 2       # deafult = 2    | good = 2
-  max_points_num: 100   # default = 50
+  max_points_num: 50   # default = 50
   layer_init_num: [5, 5, 5, 5, 5]
 
 local_map:  
@@ -65,10 +65,10 @@ uav:
 
 publish:
   dense_map_en: true
-  pub_effect_point_en: true 
-  pub_plane_en: true
+  pub_effect_point_en: false 
+  pub_plane_en: false
   pub_scan_num: 1
-  blind_rgb_points: 1.5       # default = 0.0 # good might need to match the lidar blind or more? 
+  blind_rgb_points: 1.2       # default = 0.0 # good might need to match the lidar blind or more? 
 
 evo:
   seq_name: "RSS"
