--- a/config/hap_es-gs_1944_bak_2025-02-14_v2_good_8outof10.yaml
+++ b/config/hap_es-gs_1944_bak_2025-02-14_v2_good_8outof10.yaml
@@ -4,7 +4,7 @@ common:
   imu_topic: "/livox/imu"
   img_en: 1
   lidar_en: 1
-  ros_driver_bug_fix: true    # default = false
+  ros_driver_bug_fix: false    # default = false
 
 extrin_calib:
   extrinsic_T: [ 0, 0, 0]
@@ -14,22 +14,22 @@ extrin_calib:
 
 time_offset: 
   imu_time_offset: 0.00001
-  img_time_offset: -0.06  #    # default = 0.1 | good = -0.06
+  img_time_offset: -0.060  #    # default = 0.1 | good = -0.06
   exposure_time_init: 0.0 # default = 0.0
 
 preprocess:
   point_filter_num: 1       # default = 1
-  filter_size_surf: 0.00005   # default = 0.1 | good = 0.0005
+  filter_size_surf: 0.00001   # default = 0.1 | good = 0.0005
   lidar_type: 1 # Livox Avia LiDAR
   scan_line: 6
   blind: 1.2       # default = 0.80
 
 vio:
   max_iterations: 5    # default = 5
-  outlier_threshold: 64 # 78 100 156 #100 200 500 700 infinite
+  outlier_threshold: 100 # 78 100 156 #100 200 500 700 infinite
   img_point_cov: 100         # default = 100 # no change with 10 ?  
   patch_size: 0.1     # default = 8 ] good = 0.1
-  patch_pyrimid_level: 16    # default = 4 | good = 4  | still good = 16
+  patch_pyrimid_level: 4    # default = 4 | good = 4
   normal_en: true     # default = true
   raycast_en: true    # default = false
   inverse_composition_en: false  #default = false | no idea if this helps or hinders
@@ -39,15 +39,15 @@ vio:
 imu:
   imu_en: true #true
   imu_int_frame: 30 #30
-  acc_cov: 0.2 # 0.2      # default = 0.5 good=0.25?
-  gyr_cov: 0.5 # 0.5      # default = 0.3 good=0.01
-  b_acc_cov: 0.0005 #0.0001 # 0.1 good = 0.000001?  
-  b_gyr_cov: 0.0005 #0.0001 # 0.1 good = 0.000001?
+  acc_cov: 0.5 # 0.2      # default = 0.5 good=0.25?
+  gyr_cov: 0.01 # 0.5      # default = 0.3 good=0.01
+  b_acc_cov: 0.00000001 #0.0001 # 0.1 good = 0.000001?  
+  b_gyr_cov: 0.00000001 #0.0001 # 0.1 good = 0.000001?
 
 lio:
   max_iterations: 5    # default = 5
-  dept_err: -0.0      # default = 0.02     | good = 0.002 | better = 0
-  beam_err: -0.0      # default = 0.05     | good = 0.005 | better = 0
+  dept_err: 0.0      # default = 0.02     | good = 0.002
+  beam_err: 0.0      # default = 0.05     | good = 0.005
   min_eigen_value: 0.0001 # 0.005     #default = 0.0025 good=0.002
   voxel_size: 0.25      # default = 0.5   | good = 0.025  ###MOST CRITICAL VALUE IMO###
   max_layer: 2       # deafult = 2    | good = 2
@@ -68,7 +68,7 @@ publish:
   pub_effect_point_en: true 
   pub_plane_en: true
   pub_scan_num: 1
-  blind_rgb_points: 1.2       # default = 0.0 # good might need to match the lidar blind or more? 
+  blind_rgb_points: 1.5       # default = 0.0 # good might need to match the lidar blind or more? 
 
 evo:
   seq_name: "RSS"
