--- a/config/hap_es-gs_1944.yaml
+++ b/config/hap_es-gs_1944.yaml
@@ -2,7 +2,7 @@ common:
   img_topic: "/usb_cam/image_raw"
   lid_topic: "/livox/lidar"
   imu_topic: "/livox/imu"
-  img_en: 1 
+  img_en: 0 
   lidar_en: 1
   ros_driver_bug_fix: false     # default = false
   #point_filter_num: 15          # this doesn't exist yet. I want to implement tho.
@@ -50,10 +50,10 @@ vio:
 imu:
   imu_en: true #true
   imu_int_frame: 30 #30
-  acc_cov: 0.2          # default = 0.5 good=0.2
+  acc_cov: 2          # default = 0.5 good=0.2
   gyr_cov: 0.2          # default = 0.3 good=0.2
-  b_acc_cov: 0.001 #0.0001 # 0.1 good = 0.001?  
-  b_gyr_cov: 0.001 #0.0001 # 0.1 good = 0.001?
+  b_acc_cov: 0.001 #0.0001 #  good = 0.001?  
+  b_gyr_cov: 0.001 #0.0001 #  good = 0.001?
 
 lio:
   max_iterations: 5           # default = 5          || increase when creating final output
@@ -77,13 +77,13 @@ uav:
 publish:
   dense_map_en: true
   pub_effect_point_en: true 
-  pub_plane_en: true
+  pub_plane_en: false
   pub_scan_num: 1
   blind_rgb_points: 2       # default = 0.0 # good might need to match the lidar blind or more? 
 
 evo:
   seq_name: "RSS"
-  pose_output_en: true
+  pose_output_en: false
 
 pcd_save:
   pcd_save_en: true
